# gbjam11

./: .gitignore  Cargo.toml  index.html  readme.md
assets/: mockup.ase  ships.ase  shots.aseprite
assets/shaders/: gb.wgsl
src/: loading.rs  main.rs  music.rs  title.rs  util.rs
src/entities/: mod.rs  ship.rs  shot.rs  weapon.rs
src/graphics/: mod.rs  palette.rs  pixel.rs  shader.rs  sizes.rs  star_field.rs  text.rs  transition.rs
src/logic/: damage.rs  elite.rs  hit.rs  item.rs  loot.rs  mod.rs  money.rs  movement.rs  route.rs  upgrades.rs  wave.rs
src/screens/: game_over.rs  hangar.rs  loading.rs  mod.rs  shop.rs  space.rs  text.rs  title.rs  upgrade.rs
