[package]
name = "gbjam11"
version = "0.0.1"
authors = ["yopox <yopoxdev@gmail.com>"]
description = ""
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_audio", "bevy_asset", "bevy_pbr", "bevy_winit", "bevy_text", "png", "vorbis", "x11", "webgl2"
] }
bevy_asset_loader = { version = "0.17.0", default-features = false, features = ["2d"] }
bevy_common_assets = { version = "0.7.0", features = ["ron"] }

lazy_static = "1.4"
strum = "0.25.0"
strum_macros = "0.25.2"

rand = { version = "0.8", features = ["alloc"]}

winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }
console_error_panic_hook = "0.1.7"

[build-dependencies]
embed-resource = "1.4"